# mc2

./: .gdb_history  .gitignore  BUILD-WIN.md  BUILD-WIN.txt  CMakeLists.txt  EULA.txt  MC2Repos  MechCmd2.vcproj  README.md  TODO  devdoc.txt  docs  export_clang_paths.sh  longpath.dbg  mc2res.cpp  mc2res.vcproj  options.cfg.old  resource.h  strings.res.cpp  system.cfg
.github/workflows/: cmake.yml
ARM/: Microsoft.Xna.Arm.h
GameOS/gameos/: CMakeLists.txt  gameos.cpp  gameos_debugging.cpp  gameos_fileio.cpp  gameos_graphics.cpp  gameos_graphics.h  gameos_graphics_debug.cpp  gameos_input.cpp  gameos_res.cpp  gameos_sound.cpp  gameosmain.cpp  gos_font.cpp  gos_font.h  gos_input.cpp  gos_input.h  gos_render.cpp  gos_render.h
GameOS/gameos/utils/: Image.cpp  Image.h  camera.cpp  camera.h  file_utils.cpp  file_utils.h  gl_render_constants.cpp  gl_render_constants.h  gl_utils.cpp  gl_utils.h  graphics.h  logging.cpp  logging.h  matrix.cpp  matrix.h  render_constants.h  shader_builder.cpp  shader_builder.h  stream.cpp  stream.h  string_utils.cpp  string_utils.h  timing.cpp  timing.h  vec.cpp  vec.h
GameOS/include/: 3drasterizer.hpp  acm.hpp  basetsd.h  controlmanager.hpp  datestamp.hpp  debugger.hpp  debuggui.hpp  debuginterface.hpp  deflate.h  directx.hpp  directxdebugging.hpp  dllplatform.hpp  dxrasterizer.hpp  eh.h  errorhandler.hpp  eventid.hpp  ezvector.hpp  fileio.hpp  filestream.hpp  filetransfer.hpp  flinkedlist.hpp  font3d.hpp  font3d_dbcs_storage.hpp  font3d_dbcs_surface.hpp  forcefeedback.hpp  gameos.hpp  globals.hpp  (+71 more)
GameOS/src/: CMakeLists.txt  eh.cpp  io.cpp  mbstring.cpp  mmsystem.cpp  platform_eh.cpp  platform_io.cpp  platform_mbstring.cpp  platform_mmsystem.cpp  platform_stdlib.cpp  platform_str.cpp  platform_tchar.cpp  platform_winbase.cpp  platform_winnls.cpp  platform_winuser.cpp  stdlib_win.cpp  string_win.cpp  tchar.cpp  winbase.cpp  winnls.cpp  winuser.cpp
Viewer/: CMakeLists.txt  Script1.rc  View.cpp  Viewer.vcproj  resource.h
code/: ablmc2.cpp  actor.cpp  actor.h  artlry.cpp  artlry.h  attributemeter.cpp  attributemeter.h  bldng.cpp  bldng.h  carnage.cpp  carnage.h  chatwindow.cpp  chatwindow.h  collsn.cpp  collsn.h  comndr.cpp  comndr.h  componentlistbox.cpp  componentlistbox.h  contact.cpp  contact.h  controlgui.cpp  controlgui.h  dartlry.h  dbldng.h  dcarnage.h  dcollsn.h  dcomndr.h  dcontact.h  debugging.cpp  debugging.h  delemntl.h  dgameobj.h  dgate.h  dgoal.h  dgroup.h  dgvehicl.h  dmech.h  dmover.h  dmultplyr.h  (+169 more)
data_tools/: CMakeLists.txt  aseconv.cpp  common.hpp  makefst.cpp  makersp.cpp  pak.cpp
gui/: CMakeLists.txt  GUI.vcproj  aanim.cpp  aanim.h  aanimobject.cpp  aanimobject.h  abutton.cpp  abutton.h  aedit.cpp  aedit.h  afont.cpp  afont.h  alistbox.cpp  alistbox.h  ascroll.cpp  ascroll.h  asystem.cpp  asystem.h  logisticsscreen.cpp  logisticsscreen.h
mclib/: CMakeLists.txt  MCLib.aps  MCLib.rc  MCLib.vcproj  abl.h  abldbug.cpp  abldbug.h  abldecl.cpp  ablenv.cpp  ablenv.h  ablerr.cpp  ablerr.h  ablexec.cpp  ablexec.h  ablexpr.cpp  ablgen.h  ablparse.h  ablrtn.cpp  ablscan.cpp  ablscan.h  ablstd.cpp  ablstmt.cpp  ablsymt.cpp  ablsymt.h  ablxexpr.cpp  ablxstd.cpp  ablxstmt.cpp  alphapalette.cpp  appear.cpp  appear.h  apprtype.cpp  apprtype.h  bdactor.cpp  bdactor.h  bitflag.cpp  bitflag.h  camera.cpp  camera.h  celement.cpp  celement.h  (+150 more)
mclib/gosfx/: CMakeLists.txt  card.cpp  card.hpp  cardcloud.cpp  cardcloud.hpp  debriscloud.cpp  debriscloud.hpp  effect.cpp  effect.hpp  effectcloud.cpp  effectcloud.hpp  effectlibrary.cpp  effectlibrary.hpp  fcurve.cpp  fcurve.hpp  gosFX.vcproj  gosfx.cpp  gosfx.hpp  gosfxheaders.cpp  gosfxheaders.hpp  particlecloud.cpp  particlecloud.hpp  pertcloud.cpp  pertcloud.hpp  pointcloud.cpp  pointcloud.hpp  pointlight.cpp  pointlight.hpp  shape.cpp  shape.hpp  shapecloud.cpp  shapecloud.hpp  shardcloud.cpp  shardcloud.hpp  singleton.cpp  singleton.hpp  spinningcloud.cpp  spinningcloud.hpp  tube.cpp  tube.hpp
mclib/mlr/: CMakeLists.txt  MLR.vcproj  gosimage.cpp  gosimage.hpp  gosimagepool.cpp  gosimagepool.hpp  gospoint.cpp  gospoint.hpp  gosvertex.cpp  gosvertex.hpp  gosvertex2uv.cpp  gosvertex2uv.hpp  gosvertexmanipulation.hpp  gosvertexpool.hpp  mlr.cpp  mlr.hpp  mlr_i_c_det_pmesh.cpp  mlr_i_c_det_pmesh.hpp  mlr_i_c_det_tmesh.cpp  mlr_i_c_det_tmesh.hpp  mlr_i_c_dt_pmesh.cpp  mlr_i_c_dt_pmesh.hpp  mlr_i_c_dt_tmesh.cpp  mlr_i_c_dt_tmesh.hpp  mlr_i_c_pmesh.cpp  mlr_i_c_pmesh.hpp  mlr_i_c_tmesh.cpp  mlr_i_c_tmesh.hpp  mlr_i_det_pmesh.cpp  mlr_i_det_pmesh.hpp  mlr_i_det_tmesh.cpp  mlr_i_det_tmesh.hpp  mlr_i_dt_pmesh.cpp  mlr_i_dt_pmesh.hpp  mlr_i_dt_tmesh.cpp  mlr_i_dt_tmesh.hpp  mlr_i_l_det_pmesh.cpp  mlr_i_l_det_pmesh.hpp  mlr_i_l_det_tmesh.cpp  mlr_i_l_det_tmesh.hpp  (+87 more)
mclib/stuff/: CMakeLists.txt  Stuff.vcproj  affinematrix.cpp  affinematrix.hpp  affinematrix_test.cpp  angle.cpp  angle.hpp  angle_test.cpp  armorheap.hpp  armoroff.hpp  armoron.hpp  auto_container.hpp  auto_ptr.hpp  average.hpp  chain.cpp  chain.hpp  chain_test.cpp  color.cpp  color.hpp  database.cpp  database.hpp  extentbox.cpp  extentbox.hpp  extentpoly.cpp  extentpoly.hpp  filestream.cpp  filestream.hpp  filestream_test.cpp  filestreammanager.cpp  filestreammanager.hpp  filestreammanager_test.cpp  hash.cpp  hash.hpp  hash_test.cpp  initialized_ptr.hpp  iterator.cpp  iterator.hpp  line.cpp  line.hpp  linearmatrix.cpp  (+105 more)
misc/: valgrind-fglrx.supp  valgrind.supp
pak/: CMakeLists.txt  aseconv.cpp  build_win.bat  main.cpp  pak.cpp
res/: CMakeLists.txt  READ.ME  libmain.cpp  libmain.h  libmainc.cpp
shaders/: gos_tex_vertex.frag  gos_tex_vertex.vert  gos_tex_vertex_lighted.frag  gos_tex_vertex_lighted.vert  gos_text.frag  gos_text.vert  gos_vertex.frag  gos_vertex.vert  gos_vertex_lighted.frag  gos_vertex_lighted.vert  object_tex.frag  object_tex.vert
test_scripts/: AAA.h  BBB.h  convert_jpg2tga.sh  data_names_tolower.pl  extract_string_ids.sh  fix_includes.pl  main.cpp  src_names_tolower.pl  strip_proj_files.sh
test_sound/: READ.ME  check_bad_files.cpp  playmus.c  playwave.c  problematic_files.txt
text_tool/: CMakeLists.txt  main.cpp
(+22 files in other folders)
